# qtontotaskbar

./: CMakeLists.txt
output/lib/win32msvc/qtontotaskbar/: qtontotaskbar.lib
script/: output-cpplib.py
src/: qtontotaskbar.cpp  qtontotaskbar.h  qtontotaskbar_global.h
